@@ -76,6 +76,7 @@ import org.lightjason.agentspeak.language.CRawTerm;
 import org.lightjason.agentspeak.language.ITerm;
 import org.lightjason.agentspeak.language.execution.IContext;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -248,17 +249,19 @@ public final class TestCActionMath extends IBaseTest
      *
      * @param p_input test data
      *
-     * @throws IllegalAccessException is thrown on instantiation error
-     * @throws InstantiationException is thrown on instantiation error
+     * @throws IllegalAccessException is thrwon on instantiation error
+     * @throws InstantiationException is thrwon on instantiation error
+     * @throws NoSuchMethodException is thrwon on instantiation error
+     * @throws InvocationTargetException is thrwon on instantiation error
      */
     @Test
     @UseDataProvider( "aggregationvaluegenerate" )
     public final void aggregationvalueaction( final Triple<List<ITerm>, Class<? extends IAction>, Function<Stream<Number>, ?>> p_input )
-        throws IllegalAccessException, InstantiationException
+        throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException
     {
         final List<ITerm> l_return = new ArrayList<>();
 
-        p_input.getMiddle().newInstance().execute(
+        p_input.getMiddle().getConstructor().newInstance().execute(
             false, IContext.EMPTYPLAN,
             p_input.getLeft(),
             l_return
@@ -274,17 +277,19 @@ public final class TestCActionMath extends IBaseTest
      *
      * @param p_input test data
      *
-     * @throws IllegalAccessException is thrown on instantiation error
-     * @throws InstantiationException is thrown on instantiation error
+     * @throws IllegalAccessException is thrwon on instantiation error
+     * @throws InstantiationException is thrwon on instantiation error
+     * @throws NoSuchMethodException is thrwon on instantiation error
+     * @throws InvocationTargetException is thrwon on instantiation error
      */
     @Test
     @UseDataProvider( "singlevaluegenerate" )
     public final void singlevalueaction( final Triple<List<ITerm>, Class<? extends IAction>, Function<Number, ?>> p_input )
-        throws IllegalAccessException, InstantiationException
+        throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException
     {
         final List<ITerm> l_return = new ArrayList<>();
 
-        p_input.getMiddle().newInstance().execute(
+        p_input.getMiddle().getConstructor().newInstance().execute(
             false, IContext.EMPTYPLAN,
             p_input.getLeft(),
             l_return
